<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>mu.nu.nullpo</groupId>
	<artifactId>nullpomino</artifactId>
	<version>7.6.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<repositories>
		<repository>
			<id>lib</id>
			<name>lib</name>
			<releases>
				<checksumPolicy>ignore</checksumPolicy>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<layout>default</layout>
			<url>${project.baseUri}/lib</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>net.java.dev.jna</groupId>
			<artifactId>jna</artifactId>
			<version>5.16.0</version>
		</dependency>
		<dependency>
			<groupId>mu.nu.nullpo.local</groupId>
			<artifactId>swing-worker-1.2</artifactId>
			<version>LOCAL</version>
		</dependency>
		<dependency>
			<groupId>mu.nu.nullpo.local</groupId>
			<artifactId>swing-layout-1.0.4</artifactId>
			<version>LOCAL</version>
		</dependency>
		<dependency>
			<groupId>mu.nu.nullpo.local</groupId>
			<artifactId>log4j-1.2.15</artifactId>
			<version>LOCAL</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.10</version>
				<executions>
					<execution>
						<id>copy-dependency-jars</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
							<overWriteIfNewer>true</overWriteIfNewer>
							<overWriteReleases>true</overWriteReleases>
							<overWriteSnapshots>true</overWriteSnapshots>
							<stripVersion>true</stripVersion>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
